[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/work/looper.gd" type="Script" id=1]
[ext_resource path="res://scripts/work/drawer.gd" type="Script" id=2]
[ext_resource path="res://scripts/work/Timer.gd" type="Script" id=3]
[ext_resource path="res://scripts/work/audio.gd" type="Script" id=4]
[ext_resource path="res://scripts/work/gamer.gd" type="Script" id=5]

[node name="Node2D" type="Node2D"]
position = Vector2( 208, 403 )

[node name="looper" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="audio" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
script = ExtResource( 4 )

[node name="drawer" type="Node2D" parent="."]
position = Vector2( 0, -1 )
script = ExtResource( 2 )

[node name="gamer" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Button" type="Button" parent="."]
margin_left = 0.933487
margin_top = 0.315002
margin_right = 12.9335
margin_bottom = 20.315
text = "Record"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true
script = ExtResource( 3 )
[connection signal="recording_off" from="gamer" to="drawer" method="_on_gamer_recording_off"]
[connection signal="recording_on" from="gamer" to="drawer" method="_on_gamer_recording_on"]
[connection signal="pressed" from="Button" to="gamer" method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="gamer" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="drawer" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="audio" method="_on_Timer_timeout"]
